Fix heading spacing

--- a/_sass/minimal-mistakes/_page.scss
+++ b/_sass/minimal-mistakes/_page.scss
@@ -110,6 +110,10 @@ body {
 			opacity: 1;
 		}
 	}
+    
+  h1:not(:nth-of-type(1)):not(:nth-of-type(2)) {
+        margin-top: 1em;
+    }
 
   p,
   li,
